# NN-Learning

./: MODEL_GUIDE.md  README.md  analyze_data.py  analyze_trades.py  data_ADAUSD_15m.csv  data_prepare_organized.py  main.py  model.py  pyproject.toml  trading_model.py  trading_signals.csv  train_model.py
model_outputs/: backtest_trades.csv  feature_cols.sav  scaler.sav
