[project]
name = "tcn-project"
version = "0.1.0"
description = "TCN Stock Prediction Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "pandas",
    "requests",
    "pandas-ta",
    "scikit-learn",
    "numpy",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.8",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
